--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -58,8 +58,8 @@ jobs:
     - name: Build and Push Client
       uses: docker/build-push-action@v5
       with:
-        context: ./client/frontend
-        file: ./client/frontend/Dockerfile
+        context: ../client/frontend
+        file: ../client/frontend/Dockerfile
         push: true
         tags: ${{ env.DOCKER_REPO }}/tinyurlwebapp-client:${{ env.IMAGE_TAG }}
         cache-from: type=gha
