--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -16,6 +16,20 @@ jobs:
     - name: 1. Checkout Code
       uses: actions/checkout@v4
 
+    - name: 1.1 Setup .NET SDK
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '8.0.x'
+
+    - name: 1.2 Restore NuGet packages
+      run: dotnet restore
+
+    - name: 1.3 Build solution
+      run: dotnet build --configuration Release --no-restore
+
+    - name: Run Unit Tests
+      run: dotnet test --no-build --verbosity normal
+
     - name: 2. Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -65,5 +79,5 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
       
-    - name: 5. Deployment Notification (Tùy chọn)
+    - name: 5. Deployment Notification 
       run: echo "Deployment process completed. Images pushed to Docker Hub with tag ${{ env.IMAGE_TAG }}"
