--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet restore
 
     - name: 1.3 Build solution
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build TinyUrlWebApp.sln --no-restore
 
     - name: Run Unit Tests
       run: dotnet test --no-build --verbosity normal
